# window-post-snark-server

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: api_version.rs  client.rs  error.rs  lib.rs  main.rs  run.rs  server.rs  snark_proof_grpc.proto  status.rs  tasks.rs  utils.rs
tests/: client.rs  mod.rs  server.rs  status.rs
