[package]
name = "window-post-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tonic = "0.5"
anyhow = "1.0.23"
fil_logger = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.7"
dirs = "2.0.2"

[build-dependencies]
tonic-build = "0.5"