[package]
name = "windowPost-snark-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage-proofs-core = { path = "./dep/rust-file-proofs/storage-proofs-core", version = "^10.0.0", default-features = false}
filecoin-proofs = { path = "./dep/rust-file-proofs/filecoin-proofs", default-features = false }
storage-proofs-post = { path = "./dep/rust-file-proofs/storage-proofs-post", version = "^10.0.0", default-features = false }
clap = "2.33.3"
tonic = "0.5"
prost = "0.8"
anyhow = "1.0.23"
fil_logger = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.7"
dirs = "2.0.2"
strum = "0.23"
strum_macros = "0.23"
bellperson = "0.18.0"
thiserror = "1.0.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
semver = "0.11.0"
signal-hook = "0.3.10"
futures = "0.3"

[build-dependencies]
tonic-build = "0.5"