[package]
name = "window-post-snark-server"
description = "Used to separate Snark Proof procedures in window-post of Filecoin."
version = "0.1.0"
edition = "2018"
repository = "https://github.com/hxuchen/window-post-snark-server.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage-proofs-core = { path = "./dep/rust-file-proofs/storage-proofs-core", version = "^11.0.0", default-features = false}
filecoin-proofs = { path = "./dep/rust-file-proofs/filecoin-proofs", default-features = false }
storage-proofs-post = { path = "./dep/rust-file-proofs/storage-proofs-post", version = "^11.0.0", default-features = false }
filecoin-hashers = { version = "^6.0.0", path = "./dep/rust-file-proofs/filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
clap = "2.33.3"
tonic = "0.5"
prost = "0.8"
anyhow = "1.0.23"
fil_logger = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.7"
dirs = "2.0.2"
strum = "0.23"
strum_macros = "0.23"
bellperson = "0.18.0"
thiserror = "1.0.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
semver = "0.11.0"
signal-hook = "0.3.10"
futures = "0.3"
uuid = { version = "^0.8", features = ["serde", "v4"] }
lazy_static = "1.2"
rand_xorshift = "0.3.0"
blstrs = "0.4.0"
rand = "0.8"
ff = "0.11.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "window-post-snark-server"
path = "src/bin/main.rs"